# kybra

./: .gitignore  Cargo.toml  LICENSE  NOTICE  NOTICE_PYTHON  README.md  publish-github-action.sh  setup.py  update_azle.sh  update_candid.sh
kybra/compiler/: Cargo.toml  build.sh  install_rust_dependencies.sh  install_rustup.sh
kybra/compiler/Lib/: .gitkeep
kybra/compiler/custom_modules/: principal.py  typing.py
kybra/compiler/dfx_extension/: extension.json  install.sh
kybra/compiler/kybra_compile_python_stdlib/: Cargo.toml
kybra/compiler/kybra_compile_python_stdlib/src/: main.rs
kybra/compiler/kybra_deployer/: Cargo.toml
kybra/compiler/kybra_deployer/src/: errors.rs  lib.rs
kybra/compiler/kybra_generate/: Cargo.toml
kybra/compiler/kybra_generate/src/: async_result_handler.rs  body.rs  constants.rs  errors.rs  exit_codes.rs  get_child_class_of.rs  get_name.rs  get_subscript_slice.rs  keywords.rs  lib.rs  main.rs  unwrap_rust_python_result.rs  utils.rs  what_is_it.rs
kybra/compiler/kybra_generate/src/act/: mod.rs
kybra/compiler/kybra_generate/src/act/data_type/: mod.rs
kybra/compiler/kybra_generate/src/act/guard_function/: errors.rs  mod.rs
kybra/compiler/kybra_generate/src/act/param/: returns.rs
kybra/compiler/kybra_generate/src/body/: async_result_handler.rs  call_global_python_function.rs  candid.rs  check_if_python_stdlib_installed.rs  does_interpreter_exist.rs  guard_against_non_controllers.rs  mod.rs  unwrap_rust_python_result.rs  utils.rs
kybra/compiler/kybra_generate/src/candid_type/: array.rs  errors.rs  get_subscript_slice.rs  mod.rs  opt.rs  primitive.rs  to_candid_type.rs  type_alias.rs  type_ref.rs
kybra/compiler/kybra_generate/src/candid_type/array/: errors.rs  mod.rs
kybra/compiler/kybra_generate/src/candid_type/errors/: invalid_annotation_assign.rs  invalid_assign.rs  invalid_class.rs  invalid_member.rs  invalid_subscriptable.rs  invalid_target.rs  mod.rs  none_cannot_be_a_type.rs  not_exactly_one_target.rs  target_must_be_a_name.rs  unsupported_type.rs
kybra/compiler/kybra_generate/src/candid_type/func/: errors.rs  mod.rs  rust.rs
kybra/compiler/kybra_generate/src/candid_type/opt/: errors.rs  mod.rs
kybra/compiler/kybra_generate/src/candid_type/primitive/: errors.rs  mod.rs
kybra/compiler/kybra_generate/src/candid_type/record/: mod.rs
kybra/compiler/kybra_generate/src/candid_type/service/: errors.rs  mod.rs  rust.rs
kybra/compiler/kybra_generate/src/candid_type/tuple/: errors.rs  mod.rs  tuple_members.rs
kybra/compiler/kybra_generate/src/candid_type/type_alias/: errors.rs  mod.rs
kybra/compiler/kybra_generate/src/candid_type/type_ref/: errors.rs  mod.rs
kybra/compiler/kybra_generate/src/candid_type/variant/: mod.rs
kybra/compiler/kybra_generate/src/candid_type/warnings/: default_value_ignored.rs  mod.rs
kybra/compiler/kybra_generate/src/canister_method/: errors.rs  generate.rs  mod.rs  rust.rs
kybra/compiler/kybra_generate/src/canister_method/errors/: guard_function_name.rs  mod.rs  multiple_system_methods.rs  return_type_must_be_void.rs
kybra/compiler/kybra_generate/src/canister_method/heartbeat_method/: build.rs  errors.rs  rust.rs
kybra/compiler/kybra_generate/src/canister_method/init_method/: build.rs  errors.rs  mod.rs  rust.rs
kybra/compiler/kybra_generate/src/canister_method/inspect_message_method/: build.rs  errors.rs  mod.rs  rust.rs
kybra/compiler/kybra_generate/src/canister_method/post_upgrade_method/: build.rs  errors.rs  mod.rs  rust.rs
kybra/compiler/kybra_generate/src/canister_method/pre_upgrade_method/: build.rs  errors.rs  mod.rs  rust.rs
kybra/compiler/kybra_generate/src/canister_method/query_or_update/: mod.rs  query_method.rs  rust.rs  (+2 more)
kybra/compiler/kybra_generate/src/cdk_act/: abstract_canister_tree.rs  mod.rs
kybra/compiler/kybra_generate/src/cdk_act_old/: act.rs  mod.rs
kybra/compiler/kybra_generate/src/debug/: analyze.rs  display_string.rs  mod.rs  test_error.rs  to_hash_string.rs  what_is_it.rs
kybra/compiler/kybra_generate/src/errors/: collect_results.rs  compiler_output.rs  message.rs  mod.rs  unreachable.rs
kybra/compiler/kybra_generate/src/external_canister/: errors.rs  mod.rs
kybra/compiler/kybra_generate/src/generators/: act.rs  async_result_handler.rs  body.rs  func.rs  header.rs  kybra_serde.rs  mod.rs  rng_seed.rs  stable_b_tree_map.rs  try_from_vm_value_impl.rs  try_into_vm_value_impl.rs  tuple.rs
kybra/compiler/kybra_generate/src/guard_function/: errors.rs  guard_function.rs  mod.rs
kybra/compiler/kybra_generate/src/header/: mod.rs  ref_cells.rs  traits.rs  use_statements.rs
kybra/compiler/kybra_generate/src/ic_object/: mod.rs
kybra/compiler/kybra_generate/src/kybra_ast/: mod.rs
kybra/compiler/kybra_generate/src/kybra_modules_init/: mod.rs
kybra/compiler/kybra_generate/src/method_utils/: errors.rs  mod.rs  params.rs  returns.rs
kybra/compiler/kybra_generate/src/param/: mod.rs  returns.rs
kybra/compiler/kybra_generate/src/plugins/: mod.rs
kybra/compiler/kybra_generate/src/py_ast/: analyze.rs  errors.rs  get_stmt_kinds.rs  mod.rs  py_ast.rs  to_act.rs  to_hash_string.rs
kybra/compiler/kybra_generate/src/source_map/: mod.rs
kybra/compiler/kybra_generate/src/stable_b_tree_map_nodes/: errors.rs  mod.rs
kybra/compiler/kybra_modules_init/: Cargo.toml  build.rs
kybra/compiler/kybra_modules_init/src/: main.rs
kybra/compiler/kybra_post_install/: Cargo.toml  build.rs
kybra/compiler/kybra_post_install/src/: clear_chunks.rs  dfx.rs  error.rs  generate_candid.rs  install_app_canister.rs  main.rs  permissions.rs  upload_app_canister.rs  upload_chunk.rs  upload_python_stdlib.rs
kybra/compiler/kybra_vm_value_derive/: Cargo.toml
kybra/compiler/kybra_vm_value_derive/src/: lib.rs
kybra/compiler/kybra_vm_value_derive/src/derive_try_from_vm_value/: derive_try_from_vm_value_enum.rs  derive_try_from_vm_value_struct.rs
kybra/compiler/kybra_vm_value_derive/src/derive_try_into_vm_value/: derive_try_into_vm_value_enum.rs  derive_try_into_vm_value_struct.rs
kybra/compiler/shared_utils/: Cargo.toml
kybra/compiler/shared_utils/src/: lib.rs
(+1510 files in other folders)
