[package]
name = "kybra_generated_canister"
version = "0.0.0"
edition = "2018"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.5.6"
ic-cdk-macros = "0.5.6"
candid = "0.7.16"
kybra-vm-value-derive = { path = "./kybra_vm_value_derive" }
rustpython = { git = "https://github.com/demergent-labs/RustPython", rev = "34026d22cf99bbd4a5b459e79bae545faf100609", default-features = false, features = ["stdlib"] }
# TODO add this back once we support the full stdlib: https://github.com/demergent-labs/kybra/issues/12
# rustpython = { git = "https://github.com/demergent-labs/RustPython", rev = "34026d22cf99bbd4a5b459e79bae545faf100609", default-features = false, features = ["stdlib", "freeze-stdlib"] }
rustpython-vm = { git = "https://github.com/demergent-labs/RustPython", rev = "34026d22cf99bbd4a5b459e79bae545faf100609", default-features = false, features = [] }
rustpython-stdlib = { git = "https://github.com/demergent-labs/RustPython", rev = "34026d22cf99bbd4a5b459e79bae545faf100609", default-features = false, features = [] }
rustpython-derive = { git = "https://github.com/demergent-labs/RustPython", rev = "34026d22cf99bbd4a5b459e79bae545faf100609", default-features = false, features = [] }
# TODO add this back once we support the full stdlib: https://github.com/demergent-labs/kybra/issues/12
# rustpython-pylib = { git = "https://github.com/demergent-labs/RustPython", rev = "34026d22cf99bbd4a5b459e79bae545faf100609", default-features = false, features = [] }
# rustpython = { path = "../../../../../../RustPython", default-features = false, features = [] }
getrandom = { version = "0.2.3", features = ["custom"] }
serde = "1.0.137"
serde_json = "1.0.87"
async-recursion = "1.0.0"
