[package]
name = "kybra_post_install"
version = "0.0.0"
edition = "2018"
build = "build.rs"

[profile.dev]
opt-level = 0               # Minimal optimization, prioritize compilation speed
debug = false               # Disable debug information
incremental = true          # Enable incremental compilation
codegen-units = 16          # Increase parallel code generation units
lto = false                 # Disable link-time optimization
panic = 'unwind'            # Unwind the stack upon a panic (default, you may also use 'abort' for slightly faster builds)

[dependencies]
tempfile = "3.5.0"
dirs = "5.0.1"
rustpython = { git = "https://github.com/demergent-labs/RustPython", rev = "b7b0a4994d7871bf1e21fedb6bd0f0e5639fa874", default-features = false, features = [] }
rustpython-vm = { git = "https://github.com/demergent-labs/RustPython", rev = "b7b0a4994d7871bf1e21fedb6bd0f0e5639fa874", default-features = false, features = [] }
sha2 = "0.10.6"
hex = "0.4.3"

[build-dependencies]
dirs = "5.0.1"
tempfile = "3.5.0"
fs_extra = "1.3.0"
